<resources>
    <string name="app_name">OzAtlas</string>

    <string name="ecodata_url">https://ecodata-test.ala.org.au/</string>
    <string name="biocollect_url">https://biocollect-test.ala.org.au/</string>
    <string name="bie_url">http://bie.ala.org.au/</string>

    <string name="about_us_url">http://www.ala.org.au/about-the-atlas/</string>
    <string name="contact_us_url">http://www.ala.org.au/about-the-atlas/contact-us/</string>
    <string name="register_url">https://auth.ala.org.au/userdetails/registration/createAccount</string>
    <string name="sighting_detail_url">https://biocollect-test.ala.org.au/bioActivity/index/%1$s?mobile=true</string>

    <string name="title_activity_main">OzAtlas</string>
    <string name="title">Title</string>
    <string name="search_title">Search</string>
    <string name="sight_detail">Sight Detail</string>
    <string name="about_title">About OzAtlas</string>
    <string name="contact_us_title">Contact OzAtlas</string>

    <string name="url_parameter">URL</string>
    <string name="title_parameter">TITLE</string>
    <string name="myview_parameter">MY_SIGHTING</string>
    <string name="sight_parameter">SIGHT</string>
    <string name="fragment_type_parameter">FRAGMENT_TYPE</string>
    <string name="primary_keys_parameter">PRIMARY_KEYS</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="species_name_hint">Species name</string>
    <string name="location_hint">Location</string>
    <string name="date_text">Date</string>
    <string name="time_text">Time</string>
    <string name="note_text">Note</string>
    <string name="attribution_text">Attribution</string>
    <string name="location_note_text">Location Note</string>
    <string name="location_text">ADD LOCATION</string>
    <string name="location_change_text">CHANGE LOCATION</string>
    <string name="pick_image_text">ADD IMAGE</string>
    <string name="species_text">SPECIES INFORMATION</string>
    <string name="location_heading_text">LOCATION INFORMATION</string>
    <string name="image_text">IMAGE</string>
    <string name="individual_text">Individuals</string>
    <string name="license_text">Licence</string>
    <string name="identification_tags">Identification tags</string>
    <string name="confidence_label">Are you confident of the species identification?</string>
    <string name="username_missing_error">UserName Missing</string>
    <string name="password_missing_error">Password Missing</string>
    <string name="login">Login</string>
    <string name="register">Click to register</string>
    <string name="not_internet_title">No Internet Connection</string>
    <string name="no_internet_message">Would you like to save your data so that you submit later.</string>
    <string name="upload_message">Would you like to upload all your draft sightings? Alternatively you can select some of them to upload.</string>
    <string name="currently_uploading_message">This is sight is being uploaded now.</string>
    <string name="delete_sight_title">Delete Sight</string>
    <string name="delete_sight_message">Would you like to delete this sight?</string>
    <string name="generic_error">Something is wrong.</string>
    <string name="login_error">Invalid Login Information</string>
    <string name="nothing_to_upload">There is no draft item to upload</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">All your draft projects will be deleted. Would you like to logout?</string>

    <string name="total_sighting">Total Sighting: %1$d</string>
    <string name="species_name">Species: %1$s</string>
    <string name="tags_name">Tags: %1$s</string>
    <string name="album_name">Atlas Camera</string>

    <string name="map_key">AIzaSyBpgo31aRaVLoMdVzFQx4Rqp67wURzdMYU</string>
    
    <string name="project_activity_id">d57961a1-517d-42f2-8446-c373c0c59579</string>
    <string name="project_id">b3d8e243-1137-4d26-9e15-c5a6f90815eb</string>
    <string name="project_type">OzAtlas Sightings</string>
    <string name="project_output_name">Single Sighting - Advanced</string>
</resources>
