...
            android:scaleType="centerCrop"
            android:src="@drawable/login_bg" />

        <ImageView
            android:layout_width="@dimen/edit_text_minimum_width"
            android:layout_height="match_parent"
            android:layout_above="@+id/filedLayout"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ala_logo_inline" />

        <LinearLayout
...
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/loginButton"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_top_margin_double"
                android:background="@drawable/button_background"
                android:gravity="center"
...
