...
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/tracker_home_login" />


        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/filedLayout"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:padding="@dimen/login_title_image_padding"
...
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_padding">

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/loginButton"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_top_margin_double"
                android:background="@drawable/button_background"
                android:gravity="center"
...
