...
            android:focusableInTouchMode="false"
            android:hint="@string/radius_hint"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/message"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayoutRadius"
        android:gravity="center_horizontal"
        android:text="@string/map_zoom_message"
...
