<resources>
    <string name="app_name">BioCollect</string>
    <string name="app_version">Version 1.1.1</string>

    <string name="user_project_parameter">USER_PROJECT</string>
    <string name="project_id_parameter">PROJECT_ID</string>
    <string name="project_name_parameter">PROJECT_NAME</string>

    <string name="project_initiator">biocollect</string>
    <string name="project_soft_option">nameSort</string>

    <string name="title_activity_main">BioCollect</string>

    <string name="about_title">About BioCollect</string>
    <string name="about_ala_title">About ALA</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="all_project_title">All Projects</string>
    <string name="all_record_title">All Records</string>
    <string name="my_record_title">My Records</string>
    <string name="my_project_title">My Projects</string>

    <string name="logout_message">Would you like to logout?</string>

</resources>
