...
            android:icon="@drawable/ic_folder_open_black_24dp"
            android:title="My Records" />

    </group>

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_settings_black_36dp"
        android:title="@string/setting" />

    <item android:title="BioCollect">
        <menu>
            <item
...
